--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -55,10 +55,10 @@
 
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav ">
-              <li><a href="{{ '/index.html' }}" title="">01 : Home</a></li>
-              <li><a href="{{ '/works.html' }}" title="">02 : Projects</a></li>
-              <li><a href="{{ '/about.html' }}" title="">03 : About me</a></li>
-              <li><a href="{{ '/contact.html' }}" title="">04 : Contact</a></li>
+              <li><a href="{{url_for('home')}}" title="">01 : Home</a></li>
+              <li><a href="{{url_for('contact')}}" title="">02 : Projects</a></li>
+              <li><a href="{{url_for('about')}}" title="">03 : About me</a></li>
+              <li><a href="{{url_for('contact')}}" title="">04 : Contact</a></li>
             </ul>
           </div>
         </div>
@@ -139,33 +139,11 @@
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <!-- <a
-                        href="http://www.facebook.com"
-                        title=""
-                        class="fa-icon"
-                      >
-                        <i class="fa fa-facebook"></i>
-                      </a> -->
-                      <a
-                        href=""
-                        title=""
-                        class="fa-icon"
-                      >
-                        <i class="fa fa-github"></i>
+                      <a href="" title="" class="fa-icon"><i class="fa fa-github"></i>
                       </a>
-                      <a
-                        href=""
-                        title=""
-                        class="fa-icon"
-                      >
-                        <i class="fa fa-linkedin"></i>
+                      <a href="" title="" class="fa-icon"><i class="fa fa-linkedin"></i>
                       </a>
-                      <a
-                        href=""
-                        title=""
-                        class="fa-icon"
-                      >
-                        <i class="fa fa-twitter"></i>
+                      <a href="" title="" class="fa-icon"><i class="fa fa-twitter"></i>
                       </a>
                     </div>
                   </div>
