--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -6,29 +6,15 @@
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <meta content="description" name="description" />
     <meta name="google" content="notranslate" />
-    <meta
-      content="kiptoo dennis contact page"
-      name="author"
-    />
+    <meta content="kiptoo dennis contact page" name="author"/>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="{{ url_for('static', filename='assets/apple-icon-180x180.png') }}"
-    />
-    <link
-      href="{{ url_for('static', filename='assets/favicon.ico') }}"
-      rel="icon"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='assets/apple-icon-180x180.png') }}"/>
+    <link href="{{ url_for('static', filename='assets/favicon.ico') }}" rel="icon"/>
     <title>Contact - Kiptoo </title>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="{{ url_for('static', filename='main.css') }}"
-    />
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='main.css') }}"/>
   </head>
 
   <body class="">
@@ -40,13 +26,7 @@
     <header>
       <nav class="navbar  navbar-fixed-top navbar-default">
         <div class="container">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#navbar-collapse"
-            aria-expanded="false"
-          >
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -75,42 +55,19 @@
 
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
-                <form
-                  action="/submit_form"
-                  method="post"
-                  class="reveal-content"
-                >
+                <form action="/submit_form" method="post" class="reveal-content">
                   <div class="row">
                     <div class="col-md-7">
                       <div class="form-group">
-                        <input
-                          name="email"
-                          type="email"
-                          class="form-control"
-                          id="email"
-                          placeholder="Email"
-                        />
+                        <input name="email" type="email" class="form-control" id="email" placeholder="Email"/>
                       </div>
                       <div class="form-group">
-                        <input
-                          name="subject"
-                          type="text"
-                          class="form-control"
-                          id="subject"
-                          placeholder="Subject"
-                        />
+                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject"/>
                       </div>
                       <div class="form-group">
-                        <textarea
-                          name="message"
-                          class="form-control"
-                          rows="5"
-                          placeholder="Enter your message"
-                        ></textarea>
+                        <textarea name="message" class="form-control" rows="5" placeholder="Enter your message"></textarea>
                       </div>
-                      <button type="submit" class="btn btn-default btn-lg">
-                        Send
-                      </button>
+                      <button type="submit" class="btn btn-default btn-lg">Send</button>
                     </div>
                     <div class="col-md-5 address-container">
                       <ul class="list-unstyled">
@@ -124,16 +81,11 @@
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          <a href="mailto:me@avesgraphics.com"
-                            >me@avesgraphics.com</a
-                          >
+                          <a href="mailto:me@avesgraphics.com">me@avesgraphics.com</a>
                         </li>
                         <li>
                           <span class="fa-icon">
-                            <i
-                              class="fa fa fa-map-marker"
-                              aria-hidden="true"
-                            ></i>
+                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
                           Nairobi, Kenya
                         </li>
@@ -146,25 +98,12 @@
                       >
                         <i class="fa fa-facebook"></i>
                       </a> -->
-                      <a
-                        href=""
-                        title=""
-                        class="fa-icon"
-                      >
-                        <i class="fa fa-github"></i>
+                      <a href="" title="" class="fa-icon"><i class="fa fa-github"></i>
                       </a>
-                      <a
-                        href=""
-                        title=""
-                        class="fa-icon"
-                      >
+                      <a href="" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
-                      <a
-                        href=""
-                        title=""
-                        class="fa-icon"
-                      >
+                      <a href="" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
                     </div>
