description of project KapsuTea shop

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -76,9 +76,9 @@
                         <h4>001/006</h4>
                         <h3>DocsGen</h3>
                         <p>
-                          Document automation tool using MaterializeCSS,
-                          Python/Flask and AWS services. Cuurrently deployed to
-                          Google App Engine.
+                          Ecommerce Site for a tea shop, built using :
+                          Python/Flask and Sqlite . Currently, deployed to
+                          Heroku.
                         </p>
                         <a href="" title="" class="btn btn-default">Discover</a>
                       </div>
