added terms and conditions link to footer, added projects to work template

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
             <li><a href="{{url_for('home')}}" title="">01 : Home</a></li>
-            <li><a href="{{url_for('contact')}}" title="">02 : Projects</a></li>
+            <li><a href="{{url_for('projects')}}" title="">02 : Projects</a></li>
             <li><a href="{{url_for('about')}}" title="">03 : About me</a></li>
             <li><a href="{{url_for('contact')}}" title="">04 : Contact</a></li>
           </ul>
@@ -95,16 +95,14 @@
   </div>
 
   <footer class="footer-container text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <p>
-            © 2022
-          </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <p> © 2022 | <a href="{{url_for('terms')}}">Privacy Policy</a> </p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
   <script>
     document.addEventListener("DOMContentLoaded", function (event) {
