--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -59,21 +59,78 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="section-container-spacer text-center">
-              <h1 class="h2">04 : Contact me</h1>
+              <h1 class="h2">Our Policy</h1>
             </div>
 
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
                 <h3>Terms and Conditions </h3>
                 <p>
-
+                   The following terms and conditions apply to the use of Avesgraphics website
+                  and by using the website you will be deemed to have read, understood and accepted these
+                  terms and conditions:
                 </p>
+
+                <h4> 1)Security policy. </h4>
+                <p>
+                  We are concerned about your privacy and endeavor to only collect data necessary to make your
+                  experience on our website as efficient as possible. The website has taken initiative to ensure
+                  that the data you provide is safe and secure from any loss, misuse and alteration in our hands.
+                </p>
+
+                <h4>2)Third party rights.</h4>
+
+                <p>
+                  The agreement does not give rights to 3rd parties. This agreement prohibits you from transferring
+                  your rights and obligations without our consent. However, our rights and obligations can be
+                  assigned to others if ownership changes or by law.
+                </p>
+
+                <h4>3)Limitation of liability </h4>
+
+                <p>
+                  Avesgraphics shall not be  liable for any of your engagements with a 3rd party on this website.
+                  In case you make a payment, contractual commitment or request to a 3rd party on our website,
+                  we will not be liable for any claim, costs (including legal costs), expenses or damages occasioned
+                  as a result of such action on your part.
+                  Avesgraphics website may contain links to 3rd party sites. The presence of a link to a 3rd party site
+                  does not mean that our website endorses that site, views or its products. The presence of such 3rd party
+                  links are not an endorsement or recommendation by us.
+                </p>
+
+                <h4>4)Misconduct on the website.</h4>
+
+                <p>
+                  If you are found to be in breach of any of the terms and conditions or any applicable legislation,
+                  Avesgraphics have the mandate to limit your usage of their website. Repeated misconduct will lead to
+                  termination or blockage of your account.
+                </p>
+
+                <h4>5)Updating of terms and conditions. </h4>
+
+                <p>
+                  These terms are not cast on stone and with time we might need to make slight adjustments to them so
+                  that they accurately reflect our services and policies. We will notify you before we make changes to
+                  these terms and give you and opportunity to review them before we give effect to the changes.
+                </p>
+
+
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <footer class="footer-container text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <p> © 2022 | <a href="{{url_for('terms')}}">Privacy Policy</a> </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
   <script>
     document.addEventListener("DOMContentLoaded", function (event) {
