--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -6,12 +6,8 @@
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <meta content="description" name="description" />
     <meta name="google" content="notranslate" />
-<<<<<<< HEAD
-    <meta
-      content="kiptoo dennis contact page" name="author"/>
-=======
     <meta content="kiptoo dennis contact page" name="author"/>
->>>>>>> ff7f356acea80230c6805117f3f500c452802082
+    <meta content="kiptoo dennis contact page" name="author"/>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no" />
@@ -41,7 +37,7 @@
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav ">
               <li><a href="{{url_for('home')}}" title="">01 : Home</a></li>
-              <li><a href="{{url_for('contact')}}" title="">02 : Projects</a></li>
+              <li><a href="{{url_for('projects')}}" title="">02 : Projects</a></li>
               <li><a href="{{url_for('about')}}" title="">03 : About me</a></li>
               <li><a href="{{url_for('contact')}}" title="">04 : Contact</a></li>
             </ul>
@@ -61,19 +57,24 @@
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
                 <form action="/submit_form" method="post" class="reveal-content">
+
                   <div class="row">
                     <div class="col-md-7">
                       <div class="form-group">
                         <input name="email" type="email" class="form-control" id="email" placeholder="Email"/>
                       </div>
+
                       <div class="form-group">
                         <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject"/>
                       </div>
+
                       <div class="form-group">
                         <textarea name="message" class="form-control" rows="5" placeholder="Enter your message"></textarea>
                       </div>
+
                       <button type="submit" class="btn btn-default btn-lg">Send</button>
                     </div>
+
                     <div class="col-md-5 address-container">
                       <ul class="list-unstyled">
                         <!-- <li>
@@ -82,53 +83,28 @@
                           </span>
                           + 254 745 78 06 64
                         </li> -->
-                        <li>
+                          <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
                           <a href="mailto:me@avesgraphics.com">me@avesgraphics.com</a>
                         </li>
+
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
                           Nairobi, Kenya
                         </li>
+
                       </ul>
                       <h3>Follow me on social networks</h3>
-<<<<<<< HEAD
                       <a href="https://github.com/demuk" title="" class="fa-icon"><i class="fa fa-github"></i>
-=======
-<<<<<<< HEAD
-                      <!-- <a
-                        href="http://www.facebook.com"
-                        title=""
-                        class="fa-icon"
-                      >
-                        <i class="fa fa-facebook"></i>
-                      </a> -->
-                      <a href="" title="" class="fa-icon"><i class="fa fa-github"></i>
-                      </a>
-                      <a href="" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <a href="" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-=======
-                      <a href="" title="" class="fa-icon"><i class="fa fa-github"></i>
->>>>>>> ff7f356acea80230c6805117f3f500c452802082
-                      </a>
-                      <a href="https://www.linkedin.com/in/kiptoo-dennis-565b7411a/" title="" class="fa-icon"><i class="fa fa-linkedin"></i>
-                      </a>
-<<<<<<< HEAD
-                      <a href="https://twitter.com/kptoodennis" title="" class="fa-icon"><i class="fa fa-twitter"></i>
-=======
-                      <a href="" title="" class="fa-icon"><i class="fa fa-twitter"></i>
->>>>>>> d72058866833c76482d5044a73283986669eb665
->>>>>>> ff7f356acea80230c6805117f3f500c452802082
-                      </a>
+                      <a href="https://www.linkedin.com/in/kiptoo-dennis-565b7411a/" title="" class="fa-icon"><i class="fa fa-linkedin"></i></a>
+                      <a href="https://twitter.com/kptoodennis" title="" class="fa-icon"><i class="fa fa-twitter"></i></a>
+
                     </div>
-                  </div>
+
                 </form>
               </div>
             </div>
@@ -137,17 +113,18 @@
       </div>
     </div>
 
+    <br>
+    <br>
+
     <footer class="footer-container text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <p>
-            © 2022
-          </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <p> © 2022 | <a href="{{url_for('terms')}}">Privacy Policy</a> </p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
   <script>
     document.addEventListener("DOMContentLoaded", function (event) {
