--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
             <li><a href="{{url_for('home')}}" title="">01 : Home</a></li>
-            <li><a href="{{url_for('contact')}}" title="">02 : Projects</a></li>
+            <li><a href="{{url_for('projects')}}" title="">02 : Projects</a></li>
             <li><a href="{{url_for('about')}}" title="">03 : About me</a></li>
             <li><a href="{{url_for('contact')}}" title="">04 : Contact</a></li>
           </ul>
