--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -67,14 +66,15 @@
               <!-- Carousel items -->
               <div class="carousel-inner">
                 <div class="item active">
+
                   <div class="row">
                     <div class="col-sm-4">
                       <a href="" title="" class="black-image-project-hover">
-                        <img src="static/assets/images/work-hover1.jpg" alt="" class="img-responsive"/>
+                        <img src="static/assets/images/work-hover2.jpg" alt="" class="img-responsive"/>
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>DocsGen</h3>
+                        <h3>KapsuChai</h3>
                         <p>
                           Ecommerce Site for a tea shop, built using :
                           Python/Flask and Sqlite . Currently, deployed to
@@ -90,11 +90,11 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>BT Real Estate</h3>
+                        <h3>Kiptoo Portfolio</h3>
                         <p>
-                          Real estate web app using Python and Django. Realtors
-                          are able to display their listings and users are able
-                          send inquiry about properties.
+                          Portfolio site to showcase my skills and projects, built
+                          using Flask ; flask-mail for contact page, csv to write
+                          to Excel.
                         </p>
                         <a href="" title="" class="btn btn-default">Discover</a>
                       </div>
@@ -106,67 +106,21 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>CRWN Clothing</h3>
+                        <h3>Peace Angel</h3>
                         <p>
-                          Ecommerce website built with React, Redux, Firebase
-                          storage and Cloud Functions.
+                          Artist website built using Python Flask, showcasing
+                          music library and embeded links to listen, download
+                          and share music.
                         </p>
                         <a href="" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                   </div>
-                  <!--/row-->
-                </div>
-                <!--/item-->
-                <div class="item">
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <a href="" title="" class="black-image-project-hover">
-                        <img src="static/assets/images/works/" alt="" class="img-responsive"/>
-                      </a>
-                      <div class="card-container card-container-lg">
-                        <h4>004/006</h4>
-                        <h3>Devconnector</h3>
-                        <p>
-                          Platform for developers to display their previous
-                          education, experiences amd lates repositories. There
-                          is also a forum-like discussion area.
-                        </p>
-                        <a href="" title="" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <a href="" title="" class="black-image-project-hover">
-                        <img src="static/assets/images/works/" alt="" class="img-responsive"/>
-                      </a>
-                      <div class="card-container card-container-lg">
-                        <h4>005/006</h4>
-                        <h3>Trillo</h3>
-                        <p>
-                          Responsive HTML and CSS project. Layout is handleed
-                          with CSS flexbox features
-                        </p>
-                        <a href="" title="" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
 
-                    <div class="col-sm-4">
-                      <a href="" title="" class="black-image-project-hover">
-                        <img src="static/assets/images/works/" alt="" class="img-responsive"/>
-                      </a>
-                      <div class="card-container card-container-lg">
-                        <h4>006/006</h4>
-                        <h3>Natours</h3>
-                        <p>
-                          Fully responsive landing page using advanced CSS
-                          features. Architected with Sass.
-                        </p>
-                        <a href="" title="" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
-                  </div>
                   <!--/row-->
                 </div>
+
+                <!--/item-->
 
                 <!--/item-->
               </div>
@@ -201,7 +155,6 @@
     </script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
-
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -212,7 +165,6 @@
   ga('create', 'UA-XXXXX-X', 'auto');
   ga('send', 'pageview');
 </script>
-
 -->
     <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
   </body>
