--- a/app/templates/thankyou.html
+++ b/app/templates/thankyou.html
@@ -44,10 +44,10 @@
 
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav ">
-              <li><a href="{{ '/index.html' }}" title="">01 : Home</a></li>
-              <li><a href="{{ '/works.html' }}" title="">02 : Works</a></li>
-              <li><a href="{{ '/about.html' }}" title="">03 : About me</a></li>
-              <li><a href="{{ '/contact.html' }}" title="">04 : Contact</a></li>
+              <li><a href="{{url_for('home')}}" title="">01 : Home</a></li>
+              <li><a href="{{url_for('projects')}}" title="">02 : Projects</a></li>
+              <li><a href="{{url_for('about')}}" title="">03 : About me</a></li>
+              <li><a href="{{url_for('contact')}}" title="">04 : Contact</a></li>
             </ul>
           </div>
         </div>
@@ -71,6 +71,16 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer-container text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <p> © 2022 | <a href="{{url_for('terms')}}">Privacy Policy</a> </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
   <script>
     document.addEventListener("DOMContentLoaded", function (event) {
