--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -70,7 +70,7 @@
                   <div class="row">
                     <div class="col-sm-4">
                       <a href="" title="" class="black-image-project-hover">
-                        <img src="{{url_for('static', filename='work-hover2.jpg')}}" alt="" class="img-responsive"/>
+                        <img src="{{url_for('static.images', filename='work-hover2.jpg')}}" alt="" class="img-responsive"/>
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
@@ -86,7 +86,7 @@
 
                     <div class="col-sm-4">
                       <a href="" title="" class="black-image-project-hover">
-                        <img src="{{url_for('static', filename='work-hover1.jpg')}}" alt="" class="img-responsive"/>
+                        <img src="{{url_for('static.images', filename='work-hover1.jpg')}}" alt="" class="img-responsive"/>
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
@@ -102,7 +102,7 @@
 
                     <div class="col-sm-4">
                       <a href="" title="" class="black-image-project-hover">
-                        <img src="{{url_for('static', filename='work-hover2.jpg')}}" alt="" class="img-responsive"/>
+                        <img src="{{url_for('static.images', filename='work-hover2.jpg')}}" alt="" class="img-responsive"/>
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
