--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,8 +12,7 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="apple-touch-icon" sizes="180x180"
-    href="{{ url_for('static', filename='assets/apple-icon-180x180.png') }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='assets/apple-icon-180x180.png') }}" />
   <link href="{{ url_for('static', filename='assets/favicon.ico') }}" rel="icon" />
 
   <title>Home - Kiptoo</title>
@@ -49,7 +48,7 @@
     </nav>
   </header>
   <div class="hero-full-container background-image-container green-text-container"
-    style="background-image: url('./static/assets/images/space.jpg')">
+    style="background-image: url('./static/space.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
