--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -80,7 +80,7 @@
                           Python/Flask and Sqlite . Currently, deployed to
                           Heroku.
                         </p>
-                        <a href="" title="" class="btn btn-default">Discover</a>
+                        <a href="https://kapsuchai.herokuapp.com/" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
 
